<resources>
    <string name="app_name">Bloody Samaritan</string>
    <string name="slogan">Donate Blood and Save Lives</string>
    <string name="welcome">Hello, Welcome</string>
    <string name="description">What best describes you?</string>
    <string name="donorRegistration">Donor Registration</string>
    <string name="recipientRegistration">Recipient Registration</string>
    <string name="alreadyRegistered">Already Registered? Sign in</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="RequestMessage">Write a heart felt message and add an image for the community, somebody will defintely help you if possible</string>
    <string name="choose_image"><u>Choose Image</u></string>

    <string-array name="bloodGroups">
        <item> Select your Blood Group </item>
        <item> A+ </item>
        <item> A- </item>
        <item> B+ </item>
        <item> B- </item>
        <item> AB+ </item>
        <item> AB- </item>
        <item> O+ </item>
        <item> O- </item>
    </string-array>

    <string-array name="Region">
        <item> Select your Region </item>
        <item> Nairobi </item>
        <item> Embu </item>
        <item> Nakuru </item>
        <item> Eldoret </item>
        <item> Kisumu </item>
        <item> Mombasa </item>
    </string-array>
</resources>
