<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FF0000"
    tools:context=".SelectRegistrationActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="#fff"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView


                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/applogo"/>

            <TextView


                android:text="@string/welcome"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView

                android:text="@string/description"
                android:textColor="#000"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/donorButton"
                    android:text="@string/donorRegistration"
                    android:textAllCaps="false"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/buttons_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/recipientButton"
                    android:text="@string/recipientRegistration"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/buttons_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/backButton"
                    android:text="@string/alreadyRegistered"
                    android:layout_marginTop="15dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>